done basic JSP CRUD and REST API

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,8 +7,12 @@ server.port=8080
 # H2 Database
 spring.datasource.url=jdbc:h2:mem:hrdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=ws
+spring.datasource.username=sa
 spring.datasource.password=
+
+# JSP View Resolver
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -19,6 +23,9 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JSP View Resolver
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+# Show Spring MVC view resolving process
+logging.level.org.springframework.web.servlet=DEBUG
+
+# Show internal view resolver logs
+logging.level.org.springframework.web.servlet.view=DEBUG
+
