add kafka and email sending when email created consumer receive message

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -29,3 +29,22 @@ logging.level.org.springframework.web.servlet=DEBUG
 # Show internal view resolver logs
 logging.level.org.springframework.web.servlet.view=DEBUG
 
+# Kafka Broker
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer configs
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Consumer configs
+spring.kafka.consumer.group-id=hr-group
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=weisiangworkacc@gmail.com
+spring.mail.password=oiws kbav jhtu hxhg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
